# summer

./: .gitignore
first/: CMakeLists.txt  main.cpp
more/: CMakeLists.txt  main.cpp
second/: CMakeLists.txt  main.cpp
string/: CMakeLists.txt  main.cpp  makeString.cpp  makeString.h
test/: main.cpp
third/: CMakeLists.txt  main.cpp
